<resources>
    <string name="app_name">ShopDrop</string>
    <string name="title_activity_admin_product_dash_board_">AdminProductDashBoard_Activity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_veiw_product_">Veiw_product_Activity</string>
    <string name="ProductName">Product Name</string>
    <string name="ProductDescription">Product Description</string>
    <string name="ProductPrice">Product Price</string>
    <string name="AddProduct">Add Product</string>
    <string name="AddCategory">Add Category</string>
    <string name="Description">Description</string>
    <string name="price">Price</string>
    <string name="type">Category Types</string>
    <string name="addNewProduct">Add New Product</string>
    <string name="category1">Shoes</string>
    <string name="category2">Frock</string>
    <string name="category3">Shirts</string>
    <string name="category4">mphone</string>
    <string name="category5">Laptop</string>
    <string name="category6">Jewelery</string>
    <string name="Category_Name">Category Name</string>
    <string name="ProductUpdate">Update</string>
    <string name="Product_Delete">Delete</string>
    <string name="Product_show">Show</string>
    <string name="title_activity_home_page_">HomePage_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home">homeActivity</string>

    //Category
    <string name="category">Categories</string>
    <string name="cat1">Men Shirts</string>
    <string name="cat2">Frocks</string>
    <string name="cat3">Mobile Phone</string>
    <string name="cat4">Men Shoes</string>
    <string name="cat5">Women Shoes</string>
    <string name="cat6">Rings</string>
    <string name="title_activity_userhome_">userhome_Activity</string>
    <string name="title_activity_home_">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_new_">new_Activity</string>
    <string name="title_activity_homes_">homes_Activity</string>
    <string name="ship_text">Please Write Your Shipment Details</string>
</resources>