<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryVeiw_Activity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="160dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="Category"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageView
        android:id="@+id/frock_image"
        android:layout_width="98dp"
        android:layout_height="100dp"
        android:clickable="true"
        android:contentDescription="@string/cat2"
        android:focusable="true"
        android:onClick="catDetailView"
        android:src="@drawable/frock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136" />

    <ImageView
        android:id="@+id/WomenShoe_image"
        android:layout_width="98dp"
        android:layout_height="100dp"
        android:clickable="true"
        android:contentDescription="@string/cat5"
        android:focusable="true"
        android:onClick="catDetailView"
        android:src="@drawable/women_shoe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886" />

    <ImageView
        android:id="@+id/mphone_image"
        android:layout_width="98dp"
        android:layout_height="100dp"
        android:clickable="true"
        android:contentDescription="@string/cat3"
        android:focusable="true"
        android:onClick="catDetailView"
        android:src="@drawable/mphone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.509" />

    <ImageView
        android:id="@+id/Ring_image"
        android:layout_width="98dp"
        android:layout_height="100dp"
        android:clickable="true"
        android:contentDescription="@string/cat6"
        android:focusable="true"
        android:onClick="catDetailView"
        android:src="@drawable/ring"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.887" />

    <ImageView
        android:id="@+id/MenShoe_image"
        android:layout_width="98dp"
        android:layout_height="100dp"
        android:contentDescription="@string/cat4"
        android:onClick="catDetailView"
        android:src="@drawable/shoes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.509" />

    <ImageView
        android:id="@+id/shirt_image"
        android:layout_width="98dp"
        android:layout_height="105dp"
        android:clickable="true"
        android:contentDescription="@string/cat1"
        android:focusable="true"
        android:onClick="catDetailView"
        android:src="@drawable/shirt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136" />

    <TextView
        android:id="@+id/shirt_txt"
        android:layout_width="90dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="catDetailView"
        android:text="@string/cat1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/mphone_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shirt_image"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/Frock_txt"
        android:layout_width="107dp"
        android:layout_height="26dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="catDetailView"
        android:text="@string/cat2"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/MenShoe_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.745"
        app:layout_constraintStart_toEndOf="@id/shirt_txt"
        app:layout_constraintTop_toBottomOf="@id/frock_image"
        app:layout_constraintVertical_bias="0.148" />

    <TextView
        android:id="@+id/mphone_txt"
        android:layout_width="147dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="catDetailView"
        android:text="@string/cat3"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/WomenShoe_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mphone_image"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/MenShoe_txt"
        android:layout_width="108dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="catDetailView"
        android:text="@string/cat4"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/Ring_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.754"
        app:layout_constraintStart_toEndOf="@+id/mphone_txt"
        app:layout_constraintTop_toBottomOf="@id/MenShoe_image"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Ring_txt"
        android:layout_width="71dp"
        android:layout_height="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="catDetailView"
        android:text="@string/cat6"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.735"
        app:layout_constraintStart_toEndOf="@+id/WomenShoe_image"
        app:layout_constraintTop_toBottomOf="@id/Ring_image"
        app:layout_constraintVertical_bias="0.209" />

    <TextView
        android:id="@+id/WomenShoe_txt"
        android:layout_width="69dp"
        android:layout_height="27dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="catDetailView"
        android:text="@string/cat5"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/WomenShoe_image"
        app:layout_constraintVertical_bias="0.219" />


    <Button
        android:id="@+id/addToCart_btn"
        android:layout_width="83dp"
        android:layout_height="56dp"
        android:layout_gravity="left"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/buttonstyle1"
        android:drawableEnd="@drawable/ic_action_cart"
        android:text=""
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>